--- a/my first practice.html
+++ b/my first practice.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=S, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
+      
 </head>
 <body>
-    <h1>dfdhf</h1>
+    <section class="third-change">
+            <div class="first-change">
+                <h2>Hallo I'm</h2>
+                <h1>Saiful Alam Fahim</h1>
+                <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work.</p>
+                <a target="-blank" href="file:///F:/fahim%20vha/programming%20hero/web.protfolio/my%20first%20web%20protfolio.html">kick me</a>
+            </div>
+            <div class="second-change">
+                <img src="images/peter.png" alt="">
+            </div>
+    </section>
 </body>
 </html>
